<resources>
    <string name="app_name">My Application</string>
    <string name="converter">Converter</string>
    <string name="currancy">Currancy</string>
    <string name="from">From</string>
    <string name="enter_the_country">Enter the country</string>
    <string name="to">To</string>
    <string name="result">Result</string>
    <string name="amount">amount</string>
    <string name="convert">Convert</string>
    <string name="enter_the_amount">Enter the amount</string>
</resources>