<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <TextView
       android:textColor="@color/Cur_color"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       android:id="@+id/Currancy_Text"
       android:textSize="45sp"
       android:text="@string/currancy"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>
   <TextView
       android:textColor="@color/Cur_color"
       app:layout_constraintTop_toBottomOf="@id/Currancy_Text"
       app:layout_constraintStart_toStartOf="parent"
       android:id="@+id/Converter_Text"
       android:textSize="45sp"
       android:text="@string/converter"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>
   <TextView
       android:textColor="@color/green_color"
       android:layout_marginStart="10dp"
       android:layout_marginTop="20dp"
       android:textSize="25sp"
       app:layout_constraintTop_toBottomOf="@id/Converter_Text"
       app:layout_constraintStart_toStartOf="@id/Converter_Text"
      android:id="@+id/from_Text"
       android:text="@string/from"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>
   <com.google.android.material.textfield.TextInputLayout
       app:layout_constraintTop_toBottomOf="@id/from_Text"
       app:layout_constraintStart_toStartOf="@id/from_Text"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/menu_layout1"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
       android:hint="@string/enter_the_country"
       android:layout_marginStart="10dp"
       android:layout_marginEnd="10dp"
       >
      <AutoCompleteTextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/menu_dropdown1"
          android:inputType="none"
          />




   </com.google.android.material.textfield.TextInputLayout>
   <TextView
       android:textColor="@color/green_color"
       android:layout_marginStart="10dp"
       android:layout_marginTop="20dp"
       android:textSize="25sp"
       app:layout_constraintTop_toBottomOf="@id/menu_layout1"
       app:layout_constraintStart_toStartOf="@id/menu_layout1"
       android:id="@+id/To_Text"
       android:text="@string/to"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>

   <com.google.android.material.textfield.TextInputLayout
       app:layout_constraintTop_toBottomOf="@id/To_Text"
       app:layout_constraintStart_toStartOf="@id/To_Text"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/menu_layout2"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
       android:hint="@string/enter_the_country"
       android:layout_marginStart="10dp"
       android:layout_marginEnd="10dp"
       >
      <AutoCompleteTextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/menu_dropdown2"
          android:inputType="none"
          />




   </com.google.android.material.textfield.TextInputLayout>

   <TextView
       android:textColor="@color/green_color"
       android:layout_marginStart="10dp"
       android:layout_marginTop="20dp"
       android:textSize="25sp"
       app:layout_constraintTop_toBottomOf="@id/menu_layout2"
       app:layout_constraintStart_toStartOf="@id/menu_layout2"
       android:id="@+id/amount_Text"
       android:text="@string/amount"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>


   <com.google.android.material.textfield.TextInputLayout
       app:layout_constraintTop_toBottomOf="@id/amount_Text"
       app:layout_constraintStart_toStartOf="@id/amount_Text"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/input_layout"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
       android:hint="@string/enter_the_amount"
       android:layout_marginStart="10dp"
       android:layout_marginEnd="10dp"
       >

      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/input_ed"
          android:inputType="numberDecimal"
          />



   </com.google.android.material.textfield.TextInputLayout>

   <Button
       android:backgroundTint="@color/teal_200"
       android:layout_marginEnd="45dp"
       android:textSize="20sp"
       android:text="@string/convert"
       android:layout_marginTop="20dp"
       app:layout_constraintTop_toBottomOf="@id/input_layout"
       app:layout_constraintStart_toStartOf="@id/input_layout"
       app:layout_constraintEnd_toEndOf="@id/input_layout"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/btn"
       />

   <com.google.android.material.textfield.TextInputLayout
      app:layout_constraintBottom_toBottomOf="parent"

       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/output_layout"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
       android:layout_marginBottom="20dp"
       android:layout_marginStart="10dp"
       android:layout_marginEnd="10dp"
       >

   <com.google.android.material.textfield.TextInputEditText
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/output_ed"
       android:inputType="none"
       />
   </com.google.android.material.textfield.TextInputLayout>

   <TextView
       android:textColor="@color/result_color"
       android:layout_marginStart="10dp"
       android:layout_marginTop="20dp"
       android:textSize="25sp"
      app:layout_constraintBottom_toTopOf="@id/output_layout"
       android:id="@+id/Result_Text"
       android:text="@string/result"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
      />
</androidx.constraintlayout.widget.ConstraintLayout>